# vege1.01

./: dontread.txt  readme.txt
dev/: todo.txt
lab/: lab11.docx  lab13.docx
lab10/: 分析和思考.md
vege1.0/veges/: boardw.h  boardw.ui  boardw_copy.ui  dialogw.cpp  dialogw.h  dialogw.ui  drawing.cpp  drawing.h  groupbox.cpp  groupbox.ui  header.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  veges.pro  write.cpp  write.h
vege1.1/: CMakeLists.txt  README.md  dialogw.cpp  dialogw.h  dialogw.ui  drawing.cpp  drawing.h  drawing.ui  header.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_dialogw.h  ui_drawing.h  ui_mainwindow.h  veges.pro
vege1.1/jsoncpp/: jsoncpp.pri
vege1.1/model/: char_js.json  char_utf.json
vege1.1/model/back/: char_utf.json  pyfile.py  pyfile2.py
